--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ async function callGPT(question) {
   });
 
   const data = await response.json();
-  return data.choices[0].text;
+  return data.choices[0].message.content;
 }
 
     </script>
