--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@ async function callGPT(question) {
   });
 
   const data = await response.json();
+  console.log(data.choices[0].message.content);
   return data.choices[0].message.content;
 }
 
