--- a/index.html
+++ b/index.html
@@ -151,6 +151,10 @@ async function callGPT(question) {
             {
             "role": "system",
             "content": "You are Johnny Five and you are an A.I. coding assistant. "
+            },
+            {
+                "role": "user",
+                "content": `${question}`
             }
         ],
         "temperature": 0.2,
